@@ -1,5 +1,11 @@
 2006-03-29  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-main.c:
+	Don't show the main window until there is nothing else that could
+	go wrong (#321859).
+
+2006-03-29  Ross Burton  <ross@burtonini.com>
+
 	* src/sj-prefs.c:
 	Handle NULL profiles.
 
